static: fix content overflow
Fixes golang/go#51049

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/388034
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/static/frontend/unit/main/_meta.css
+++ b/static/frontend/unit/main/_meta.css
@@ -20,6 +20,7 @@
 .UnitMeta-repo {
   align-items: center;
   display: flex;
+  overflow: hidden;
 }
 .UnitMeta-repo a {
   overflow: hidden;
